--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  get_it: ^9.0.5
   go_router: ^16.3.0
   google_fonts: ^6.3.2
   smooth_page_indicator: ^1.2.1
